--- a/WEB/wwwroot/index.html
+++ b/WEB/wwwroot/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Lista de Peças</title>
+	<title>CrudPecas</title>
 	<script
 		id="sap-ui-bootstrap"
 		src="https://sdk.openui5.org/resources/sap-ui-core.js"
@@ -10,13 +10,13 @@
 		data-sap-ui-libs="sap.m"
 		data-sap-ui-compatVersion="edge"
 		data-sap-ui-async="true"
-		data-sap-ui-onInit="module:sap/ui/demo/walkthrough/index"
+		data-sap-ui-onInit="module:sap/ui/core/ComponentSupport"
 		data-sap-ui-resourceroots='{
-			"sap.ui.demo.walkthrough": "./"
+			"sap.ui.demo.CrudPecas": "./"
 		}'>
 	</script>
 </head>
 <body class="sapUiBody" id="content">
+	<div data-sap-ui-component data-name="sap.ui.demo.CrudPecas" data-id="container" data-settings='{"id" : "CrudPecas"}'></div>
 </body>
-
 </html>
