--- a/WEB/wwwroot/webapp/index.html
+++ b/WEB/wwwroot/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>CrudPecas</title>
+	<title>Cadastro</title>
 	<script
 		id="sap-ui-bootstrap"
 		src="https://sdk.openui5.org/resources/sap-ui-core.js"
