Aplicando algumas modificações

--- a/WEB/wwwroot/webapp/index.html
+++ b/WEB/wwwroot/webapp/index.html
@@ -17,6 +17,6 @@
 	</script>
 </head>
 <body class="sapUiBody" id="content">
-	<div data-sap-ui-component data-name="sap.ui.demo.CrudPecas" data-id="container" data-settings='{"id" : "CrudPecas"}'></div>
+	<div data-sap-ui-component data-name="sap.ui.demo.CrudPecas" data-id="container" data-settings='{"id" : "sap.ui.demo.CrudPecas"}'></div>
 </body>
 </html>
