--- a/WEB/wwwroot/index.html
+++ b/WEB/wwwroot/index.html
@@ -7,7 +7,7 @@
 	<script
 		id="sap-ui-bootstrap"
 		src="https://sdk.openui5.org/resources/sap-ui-core.js"
-		data-sap-ui-theme="sap_fiori_3_dark"
+		data-sap-ui-theme="sap_horizon_dark"
 		data-sap-ui-resourceroots='{
 			"PedroAutoPecas": "./"
 		}'
