Teste de comunicacao entre servico e cadastro realizado

--- a/WEB/wwwroot/index.html
+++ b/WEB/wwwroot/index.html
@@ -18,6 +18,6 @@
 	</script>
 </head>
 <body class="sapUiBody" id="content">
-	<div data-sap-ui-component data-name="PedroAutoPecas" data-id="container" data-settings='{"id" : "walkthrough"}'></div>
+	<div data-sap-ui-component data-name="PedroAutoPecas" data-id="container" data-settings='{"id" : "PedroAutoPecas"}'></div>
 </body>
 </html>
